fix z-index left-menu

--- a/PortGroup/src/styles/layout/_left-menu.scss
+++ b/PortGroup/src/styles/layout/_left-menu.scss
@@ -3,7 +3,7 @@
     top: 45%;
     transform: rotate(-90deg);
     left: -165px;
-    z-index: 10;
+    z-index: 9;
 
     @include media ("<tablet"){
         display: none;
